fix(breadcrumb): dont let item text wrap under separator

--- a/src/patternfly/components/Breadcrumb/breadcrumb.scss
+++ b/src/patternfly/components/Breadcrumb/breadcrumb.scss
@@ -29,6 +29,8 @@
 
 // Breadcrumb list item
 .pf-c-breadcrumb__item {
+  display: flex;
+  align-items: baseline;
   font-size: var(--pf-c-breadcrumb__item--FontSize);
   font-weight: var(--pf-c-breadcrumb__item--FontWeight);
   line-height: var(--pf-c-breadcrumb__item--LineHeight);
